// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberInput component accepts a controled value 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="32"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component accepts classnames 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput foo MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="0"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component accepts error prop 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="0"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component accepts floating point numbers 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="1.9"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component accepts negative values 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="-27"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component changes the inputs value if a number is written 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="27"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component empty strings 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component non numerical characters 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component renders a number input 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="false"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value="0"
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;

exports[`NumberInput component returns an empty string if 'NaN' is passed as the input value 1`] = `
<div>
  <div
    class="MuiInputBase-root MuiInput-root DhigNumberInput  MuiInput-underline MuiInputBase-colorPrimary Mui-error MuiInputBase-adornedEnd emotion-0"
  >
    <input
      aria-invalid="true"
      class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedEnd emotion-1"
      id=""
      type="number"
      value=""
    />
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/subtract"
          >
            <path
              d="M4 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
    <div
      class="MuiInputAdornment-root MuiInputAdornment-positionEnd emotion-2"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-3"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <svg
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            id="utility/add"
          >
            <path
              d="M12 4V12M12 20V12M12 12H4M12 12H20"
              id="stroke"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-width="1.5"
            />
          </g>
        </svg>
      </svg>
    </div>
  </div>
</div>
`;
